<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ic_bluetooth_disable"
        android:layout_width="@dimen/ic_bluetooth_disabled_size"
        android:layout_height="@dimen/ic_bluetooth_disabled_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_bluetooth_disabled"
        app:tint="@color/permission_setting_de_active" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bluetooth_permission_denied_title"
        style="@style/permission_setting_invalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bluetooth_denied_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_bluetooth_disable" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/permission_denied_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/bluetooth_permission_explain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth_permission_denied_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_enable_bluetooth_permission"
        style="@style/activate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bluetooth_enable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permission_denied_explain" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/bluetooth_permission_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="ic_bluetooth_disable,permission_denied_explain,action_enable_bluetooth_permission,bluetooth_permission_denied_title"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/ic_gps_disable"
        android:layout_width="@dimen/ic_bluetooth_disabled_size"
        android:layout_height="@dimen/ic_bluetooth_disabled_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_location_off"
        app:tint="@color/permission_setting_de_active" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gps_permission_denied_title"
        style="@style/permission_setting_invalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gps_denied_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_gps_disable" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gps_permission_denied_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/gps_permission_explain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gps_permission_denied_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_enable_gps_permission"
        style="@style/activate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gps_enable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gps_permission_denied_explain" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gps_permission_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="ic_gps_disable,gps_permission_denied_title,gps_permission_denied_explain,action_enable_gps_permission"
        tools:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>