<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ic_bluetooth_disable"
        android:layout_width="@dimen/ic_bluetooth_disabled_size"
        android:layout_height="@dimen/ic_bluetooth_disabled_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_bluetooth_disabled" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bluetooth_permission_denied_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bluetooth_denied_permission"
        android:textColor="@color/text_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_bluetooth_disable" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/permission_denied_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/bluetooth_permission_explain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth_permission_denied_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_enable_bluetooth_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bluetooth_enable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permission_denied_explain" />


</androidx.constraintlayout.widget.ConstraintLayout>