<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activate_button"
        style="@style/activate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/node_activate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/mesh_device_info_divider"
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activate_button" />

    <TextView
        android:id="@+id/activated_device_info"
        style="@style/device_config_info_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/device_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mesh_device_info_divider" />

    <TextView
        android:id="@+id/activated_device_name_title"
        style="@style/device_config_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/device_name"
        app:layout_constraintStart_toStartOf="@+id/activated_device_info"
        app:layout_constraintTop_toBottomOf="@+id/activated_device_info" />

    <TextView
        android:id="@+id/activated_device_name"
        style="@style/device_config_param_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/activated_device_name_title"
        app:layout_constraintTop_toBottomOf="@+id/activated_device_name_title"
        tools:text="unknown" />

    <ImageView
        android:id="@+id/ic_activated_device_name_edit"
        style="@style/device_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:src="@drawable/ic_text_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activated_device_name_title" />

    <TextView
        android:id="@+id/activated_battery_title"
        style="@style/device_config_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/battery"
        app:layout_constraintStart_toStartOf="@+id/activated_device_info"
        app:layout_constraintTop_toBottomOf="@+id/activated_device_name" />

    <TextView
        android:id="@+id/activated_battery"
        style="@style/device_config_param_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/activated_battery_title"
        app:layout_constraintTop_toBottomOf="@+id/activated_battery_title"
        tools:text="0%" />

    <ImageView
        android:id="@+id/ic_activated_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:src="@drawable/ic_baseline_battery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activated_battery_title"
        app:tint="@color/battery" />


</androidx.constraintlayout.widget.ConstraintLayout>